whitespace fix

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -305,8 +305,8 @@ hr {
 /*---- About ----*/
 
 .about {
-  padding-top: 4%;
-  padding-bottom: 4%;
+  padding-top: 5%;
+  padding-bottom: 5%;
 }
 
 .about h4 {
@@ -324,14 +324,6 @@ hr {
 /*---- Service ----*/
 
 .service-highlight {
-    padding-top: 5%;
-    padding-bottom: 4%;
-    background: $primary-bg;
-}
-
-/*---- Recent Work ----*/
-
-.recent-work {
     padding-top: 5%;
     padding-bottom: 5%;
     background: $primary-bg;
@@ -404,8 +396,8 @@ hr {
 /*---- Process ----*/
 
 .process {
-    padding-top: 4%;
-    padding-bottom: 4%;
+    padding-top: 5%;
+    padding-bottom: 5%;
 }
 
 .circle {
@@ -485,12 +477,12 @@ textarea {
 }
 
 .portfolio-section {
-  padding-top: 4%;
-  padding-bottom: 4%;
+  padding-top: 5%;
+  padding-bottom: 5%;
 }
 
 .portfolio-section-top {
-  padding-bottom: 4%;
+  padding-bottom: 5%;
 }
 
 .shadow {
